--- a/ClientKarakatsiyaHelper/src/index.html
+++ b/ClientKarakatsiyaHelper/src/index.html
@@ -5,6 +5,22 @@
   <title>ClientKarakatsiyaHelper</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <script>
+    // предотвращает мигание неправильной темы при загрузке
+    (function(){
+      try {
+        var t = localStorage.getItem('app-theme');
+        if (!t) {
+          var prefersDark = window.matchMedia &&
+            window.matchMedia('(prefers-color-scheme: dark)').matches;
+          t = prefersDark ? 'dark' : 'light';
+        }
+        if (t === 'dark') document.documentElement.classList.add('dark-theme');
+      } catch(e){}
+    })();
+  </script>
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
